# mofida

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  manual.md  moufida.md  roadmap.md
admin/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
backend/orchestrator/: Dockerfile  pyproject.toml
backend/orchestrator/app/: admin_router.py  axis_registry.py  competitor_router.py  creation_router.py  daemon_router.py  dependency.py  diagnostic_router.py  events_router.py  evidence_snapshot.py  history_router.py  intake_router.py  integrations_router.py  kb_router.py  lang_detect.py  llm_json.py  main.py  opportunity_router.py  persona_router.py  pitch_router.py  redis_consumer.py  roadmap_router.py  scenario_router.py  signals.py  sse.py  state_router.py  telemetry.py  telemetry_middleware.py  tools_router.py  watch_targets_router.py
backend/orchestrator/app/cat/: __init__.py  irt.py  item_bank.json  session.py
backend/orchestrator/app/cbm/: __init__.py  concepts.json  router.py  scorer.py
backend/orchestrator/app/diagnostic/: aggregator.py
backend/orchestrator/app/generation/: evidence.py  runner.py
backend/orchestrator/app/graph/: __init__.py  state.py
backend/orchestrator/app/intake/: __init__.py
backend/orchestrator/app/updates/: pipeline.py
backend/orchestrator/tests/: test_cat.py  test_dependency.py
daemon/: Dockerfile  go.mod
docs/: 01-prd-and-system-overview.md  02-component-architecture.md  03-language-and-evaluation.md  04-mapping-workflows-conclusion.md  animated-desktop-companion.md  moufida-tools.md  (+4 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: companion.json  default.json
frontend/src-tauri/src/: main.rs
scoring-engine/: Dockerfile  pyproject.toml
scoring-engine/affinitree/: rubric.py  scorer.py
scoring-engine/affinitree/config/: innovation.json  scalability.json
scoring-engine/app/: main.py
signal/: .gitignore  Cargo.toml  Dockerfile  README.md
signal/assets/: cbm_weights.json
signal/src/: cat.rs  cbm.rs  main.rs  npy.rs  probe.rs
(+365 files in other folders)
