[project]
name = "affinitree"
version = "0.1.0"
description = "Deterministic, explainable weighted-sum scoring engine for Moufida"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
rubric = [
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["affinitree"]

[tool.pytest.ini_options]
testpaths = ["tests"]
