[package]
name = "moufida"
version = "0.1.0"
edition = "2021"
description = "Moufida -- voice-first local entrepreneurial copilot"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
